[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
codegen = { path = "../codegen" }
clap = { version = "4.3.19", features = ["derive"] }
anyhow = { version = "1.0" }
