[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift = "0.99.0"
cranelift-object = "0.99.0"
cranelift-native = "0.99.0"
libc = "0.2.147"
memmap2 = "0.7.1"
target-lexicon = "0.12.11"
thiserror = { workspace = true }
cranelift-module = "0.99.1"
