[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salsa = { workspace = true }
thiserror = { workspace = true }
parser = { path = "../parser" }
codegen = { path = "../codegen" }
utils = { path = "../utils" }
derive-new = "0.5.9"
